fix(widgets): croix invisible (#132)

--- a/src/packages/CSS/Controls/LocationSelector/DSFRlocationStyle.css
+++ b/src/packages/CSS/Controls/LocationSelector/DSFRlocationStyle.css
@@ -1,10 +1,20 @@
 .gpf-btn-icon-pointer::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
     -webkit-mask: url("img/reticle.svg") center no-repeat;
     mask: url("img/reticle.svg") center no-repeat;
+    background-color: var(--text-inverted-blue-france);
 }
 
 .gpf-btn-icon-pointer {
   min-width: 2.5rem;
+  position: relative;
 }
 
 .gpf-btn-icon-label {}
